Fixed z-index issue with navigation dropdown

--- a/style.css
+++ b/style.css
@@ -1700,7 +1700,6 @@ h1 {
     font-size: 16px;
     weight: 400;
     margin-top: 10vh;
-    z-index: 20000;
     position: relative;
 }
 
